Fix several bugs, including error view count caused by redis config, the missing part of implement of editing articles and so on.

--- a/blog.conf
+++ b/blog.conf
@@ -3,7 +3,7 @@ gzip_buffers 4 16k;
 gzip_comp_level 2;
 gzip_vary off;
 upstream appstream{
-
+        # https://www.jianshu.com/p/b010c9302cd0 看proxy用法
         server blog-app:8888/blog-api;
 }
 
