--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,17 @@
                 <artifactId>qiniu-java-sdk</artifactId>
                 <version>[7.7.0, 7.7.99]</version>
             </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>2.7.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>1.9.6</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
