--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,54 @@
-# Compiled class file
-*.class
+HELP.md
+target/
+**/target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-# Log file
-*.log
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# BlueJ files
-*.ctxt
+### Private ###
+blog.conf
+docker-compose.yml
+dockerfile.txt
+blog-api/src/main/resources/application.properties
+blog-api/src/main/resources/application.yml
+blog-api/src/main/resources/application-prod.yml
+blog-api/src/main/resources/application-prod.properties
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+blog-admin/src/main/resources/application-dev.yml
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+
+
+### VS Code ###
+.vscode/
+
+### blog-admin ###
+#**/blog-admin
